force-app/main/default/objects/Leave_Policy__c/Leave_Policy__c.object-meta.xml
<CustomObject>
    <description>Configurable leave entitlement policy per designation and leave type. Defines annual entitlement, monthly accrual rate, and carry-forward rules.</description>
    <label>Leave Policy</label>
    <nameField>
        <label>Policy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leave Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>