force-app/main/default/objects/Leave_Policy__c/fields/Annual_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Annual_Entitlement__c</fullName>
    <label>Annual Entitlement (Days)</label>
    <precision>5</precision>
    <scale>1</scale>
    <required>true</required>
    <type>Number</type>
    <defaultValue>12</defaultValue>
    <inlineHelpText>Total number of leave days entitled per year for this leave type and designation.</inlineHelpText>
</CustomField>