force-app/main/default/objects/Leave_Policy__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <length>255</length>
    <type>Text</type>
    <inlineHelpText>Employee designation this policy applies to (e.g., Sales Representative, Area Sales Manager). Leave blank for a universal policy that applies to all designations.</inlineHelpText>
    <description>Blank = applies to all designations (universal fallback).</description>
</CustomField>