force-app/main/default/objects/Leave_Policy__c/fields/Effective_Year__c.field-meta.xml
<CustomField>
    <fullName>Effective_Year__c</fullName>
    <label>Effective Year</label>
    <length>4</length>
    <type>Text</type>
    <inlineHelpText>Fiscal year this policy is effective for (e.g., 2026). Blank = applies to all years.</inlineHelpText>
</CustomField>