force-app/main/default/objects/Leave_Policy__c/fields/Encashable__c.field-meta.xml
<CustomField>
    <fullName>Encashable__c</fullName>
    <label>Encashable</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <inlineHelpText>If checked, unused days of this leave type can be encashed at year end.</inlineHelpText>
</CustomField>