force-app/main/default/objects/Leave_Policy__c/fields/Max_Carry_Forward__c.field-meta.xml
<CustomField>
    <fullName>Max_Carry_Forward__c</fullName>
    <label>Max Carry Forward (Days)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Maximum unused days that can carry forward to the next year. 0 = no carry forward (balance resets). Example: EL may carry up to 30 days.</inlineHelpText>
</CustomField>