force-app/main/default/objects/Leave_Policy__c/fields/Monthly_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Accrual__c</fullName>
    <label>Monthly Accrual (Days)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
    <inlineHelpText>Days accrued per month. Example: 1.25 days/month for EL (15 days/year). Leave blank or 0 for full lump-sum credit at year start (e.g., CL, SL).</inlineHelpText>
    <description>Null/0 = full entitlement credited at start of year. >0 = accrues monthly via batch.</description>
</CustomField>